# Indexer

./: .gitignore  Cargo.toml  README.md
docs/: PROJECT_STRUCTURE.md  log_example.md  quickstart_guide.md
src/: adaptive_ethers.rs  alloy_client.rs  client_trait.rs  config.rs  database.rs  error.rs  ethereum.rs  indexer.rs  lib.rs  main.rs  models.rs
