[package]
name = "ZamaAssignment"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ZamaAssignment"
path = "src/main.rs"

[[bin]]
name = "db"
path = "src/bin/db.rs"

[[bin]]
name = "verify"
path = "src/bin/verify.rs"


[dependencies]
# Ethereum and RPC - ethers-rs
ethers = { version = "2.0", features = ["ws", "rustls"] }
ethers-core = "2.0"
ethers-providers = "2.0"
ethers-contract = "2.0"
ethers-signers = "2.0"

# Ethereum and RPC - Alloy
alloy = { version = "0.1.0-alpha.1", features = ["full"] }

# HTTP client for Alloy
reqwest = { version = "0.12", features = ["json"] }

# Database
rusqlite = { version = "0.29", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.22"
tokio = { version = "1.0", features = ["full"] }

# Serialization and utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
tokio-stream = "0.1"
futures = "0.3"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.0"
